@@ -502,31 +502,23 @@ iv
 \subsection*{2.4~~~Definition Lists}
 \label{definition-lists}
 \begin{description}
-%[visit_definition_list_item]
-\item[{Term}] 
+\item[{Term}] \leavevmode 
 Definition
 
-%[depart_definition_list_item]
-%[visit_definition_list_item]
-\item[{Term}] (\textbf{classifier})
+\item[{Term}] \leavevmode (\textbf{classifier})
 
 Definition paragraph 1.
 
 Definition paragraph 2.
 
-%[depart_definition_list_item]
-%[visit_definition_list_item]
-\item[{Term}] 
+\item[{Term}] \leavevmode 
 Definition
 
-%[depart_definition_list_item]
-%[visit_definition_list_item]
-\item[{Term}] (\textbf{classifier one})
+\item[{Term}] \leavevmode (\textbf{classifier one})
 (\textbf{classifier two})
 
 Definition
 
-%[depart_definition_list_item]
 \end{description}
 
 
@@ -1460,8 +1452,7 @@ verbose
 \end{optionlist}
 \end{quote}
 \begin{description}
-%[visit_definition_list_item]
-\item[{In a definition list:}] ~
+\item[{In a definition list:}] \leavevmode ~
 \begin{optionlist}{3cm}
 \item [-{}-help]  
 show help
@@ -1469,7 +1460,6 @@ show help
 verbose
 \end{optionlist}
 
-%[depart_definition_list_item]
 \end{description}
 
 
